# pagespring

./: .env.example  .gitignore  .pf-guards.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  llms.txt  pyproject.toml
.ai/rules/: anti-patterns.md  code-style.md  config-driven.md  docs-sync.md  git-safety.md  pattern-verification.md
.github/workflows/: ci.yml  publish.yml
docs/: README.md  architecture.md  usage.md
src/pagespring/: __init__.py  audit.py  base.py  cli.py  config.py  http.py  images.py  manifest.py  orchestrate.py  refresh.py  registry.py
src/pagespring/patterns/: __init__.py  _apple_merge.py  _docusaurus.py  _gitbook.py  _mkdocs.py  _openapi_render.py  _postman_render.py  _site.py  _sphinx.py  api_spec.py  apple_help.py  archive_download.py  docs_probe.py  gitbook.py  github_markdown.py  llms_txt.py  microsoft_support.py  openstax.py  pdf_url.py  readthedocs.py  zendesk_help.py
tests/: test_api_spec.py  test_apple_help.py  test_archive_download.py  test_audit.py  test_cli.py  test_docs_probe.py  test_docusaurus.py  test_gitbook.py  test_github_markdown.py  test_http.py  test_images.py  test_llms_txt.py  test_llms_txt_index.py  test_manifest.py  test_microsoft_support.py  test_mkdocs.py  test_openstax.py  test_orchestrate.py  test_pdf_url.py  test_readthedocs.py  test_refresh.py  test_registry.py  test_scaffold.py  test_site.py  test_sphinx.py  test_zendesk_help.py
tests/fixtures/apple_help/numbers/: intro-tables-num456.html  welcome.html  whats-new-num123.html
